qt/gen_qinputdialog.nim


proc fcQInputDialog_new(parent: pointer): ptr cQInputDialog {.importc: "QInputDialog_new".}
proc fcQInputDialog_new2(): ptr cQInputDialog {.importc: "QInputDialog_new2".}
proc fcQInputDialog_new3(parent: pointer, flags: cint): ptr cQInputDialog {.importc: "QInputDialog_new3".}
proc fcQInputDialog_metaObject(self: pointer, ): pointer {.importc: "QInputDialog_metaObject".}
proc fcQInputDialog_metacast(self: pointer, param1: cstring): pointer {.importc: "QInputDialog_metacast".}
proc fcQInputDialog_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QInputDialog_metacall".}
proc fcQInputDialog_tr(s: cstring): struct_miqt_string {.importc: "QInputDialog_tr".}
proc fcQInputDialog_trUtf8(s: cstring): struct_miqt_string {.importc: "QInputDialog_trUtf8".}
proc fcQInputDialog_setInputMode(self: pointer, mode: cint): void {.importc: "QInputDialog_setInputMode".}
proc fcQInputDialog_inputMode(self: pointer, ): cint {.importc: "QInputDialog_inputMode".}
proc fcQInputDialog_setLabelText(self: pointer, text: struct_miqt_string): void {.importc: "QInputDialog_setLabelText".}
proc fcQInputDialog_labelText(self: pointer, ): struct_miqt_string {.importc: "QInputDialog_labelText".}
proc fcQInputDialog_setOption(self: pointer, option: cint): void {.importc: "QInputDialog_setOption".}
proc fcQInputDialog_testOption(self: pointer, option: cint): bool {.importc: "QInputDialog_testOption".}
proc fcQInputDialog_setOptions(self: pointer, options: cint): void {.importc: "QInputDialog_setOptions".}
proc fcQInputDialog_options(self: pointer, ): cint {.importc: "QInputDialog_options".}
proc fcQInputDialog_setTextValue(self: pointer, text: struct_miqt_string): void {.importc: "QInputDialog_setTextValue".}
proc fcQInputDialog_textValue(self: pointer, ): struct_miqt_string {.importc: "QInputDialog_textValue".}
proc fcQInputDialog_setTextEchoMode(self: pointer, mode: cint): void {.importc: "QInputDialog_setTextEchoMode".}
proc fcQInputDialog_textEchoMode(self: pointer, ): cint {.importc: "QInputDialog_textEchoMode".}
proc fcQInputDialog_setComboBoxEditable(self: pointer, editable: bool): void {.importc: "QInputDialog_setComboBoxEditable".}
proc fcQInputDialog_isComboBoxEditable(self: pointer, ): bool {.importc: "QInputDialog_isComboBoxEditable".}
proc fcQInputDialog_setComboBoxItems(self: pointer, items: struct_miqt_array): void {.importc: "QInputDialog_setComboBoxItems".}
proc fcQInputDialog_comboBoxItems(self: pointer, ): struct_miqt_array {.importc: "QInputDialog_comboBoxItems".}
proc fcQInputDialog_setIntValue(self: pointer, value: cint): void {.importc: "QInputDialog_setIntValue".}
proc fcQInputDialog_intValue(self: pointer, ): cint {.importc: "QInputDialog_intValue".}
proc fcQInputDialog_setIntMinimum(self: pointer, min: cint): void {.importc: "QInputDialog_setIntMinimum".}
proc fcQInputDialog_intMinimum(self: pointer, ): cint {.importc: "QInputDialog_intMinimum".}
proc fcQInputDialog_setIntMaximum(self: pointer, max: cint): void {.importc: "QInputDialog_setIntMaximum".}
proc fcQInputDialog_intMaximum(self: pointer, ): cint {.importc: "QInputDialog_intMaximum".}
proc fcQInputDialog_setIntRange(self: pointer, min: cint, max: cint): void {.importc: "QInputDialog_setIntRange".}
proc fcQInputDialog_setIntStep(self: pointer, step: cint): void {.importc: "QInputDialog_setIntStep".}
proc fcQInputDialog_intStep(self: pointer, ): cint {.importc: "QInputDialog_intStep".}
proc fcQInputDialog_setDoubleValue(self: pointer, value: float64): void {.importc: "QInputDialog_setDoubleValue".}
proc fcQInputDialog_doubleValue(self: pointer, ): float64 {.importc: "QInputDialog_doubleValue".}
proc fcQInputDialog_setDoubleMinimum(self: pointer, min: float64): void {.importc: "QInputDialog_setDoubleMinimum".}
proc fcQInputDialog_doubleMinimum(self: pointer, ): float64 {.importc: "QInputDialog_doubleMinimum".}
proc fcQInputDialog_setDoubleMaximum(self: pointer, max: float64): void {.importc: "QInputDialog_setDoubleMaximum".}
proc fcQInputDialog_doubleMaximum(self: pointer, ): float64 {.importc: "QInputDialog_doubleMaximum".}
proc fcQInputDialog_setDoubleRange(self: pointer, min: float64, max: float64): void {.importc: "QInputDialog_setDoubleRange".}
proc fcQInputDialog_setDoubleDecimals(self: pointer, decimals: cint): void {.importc: "QInputDialog_setDoubleDecimals".}
proc fcQInputDialog_doubleDecimals(self: pointer, ): cint {.importc: "QInputDialog_doubleDecimals".}
proc fcQInputDialog_setOkButtonText(self: pointer, text: struct_miqt_string): void {.importc: "QInputDialog_setOkButtonText".}
proc fcQInputDialog_okButtonText(self: pointer, ): struct_miqt_string {.importc: "QInputDialog_okButtonText".}
proc fcQInputDialog_setCancelButtonText(self: pointer, text: struct_miqt_string): void {.importc: "QInputDialog_setCancelButtonText".}
proc fcQInputDialog_cancelButtonText(self: pointer, ): struct_miqt_string {.importc: "QInputDialog_cancelButtonText".}
proc fcQInputDialog_minimumSizeHint(self: pointer, ): pointer {.importc: "QInputDialog_minimumSizeHint".}
proc fcQInputDialog_sizeHint(self: pointer, ): pointer {.importc: "QInputDialog_sizeHint".}
proc fcQInputDialog_setVisible(self: pointer, visible: bool): void {.importc: "QInputDialog_setVisible".}
proc fcQInputDialog_getText(parent: pointer, title: struct_miqt_string, label: struct_miqt_string): struct_miqt_string {.importc: "QInputDialog_getText".}
proc fcQInputDialog_getMultiLineText(parent: pointer, title: struct_miqt_string, label: struct_miqt_string): struct_miqt_string {.importc: "QInputDialog_getMultiLineText".}
proc fcQInputDialog_getItem(parent: pointer, title: struct_miqt_string, label: struct_miqt_string, items: struct_miqt_array): struct_miqt_string {.importc: "QInputDialog_getItem".}
proc fcQInputDialog_getInt(parent: pointer, title: struct_miqt_string, label: struct_miqt_string): cint {.importc: "QInputDialog_getInt".}
proc fcQInputDialog_getDouble(parent: pointer, title: struct_miqt_string, label: struct_miqt_string): float64 {.importc: "QInputDialog_getDouble".}
proc fcQInputDialog_getDouble2(parent: pointer, title: struct_miqt_string, label: struct_miqt_string, value: float64, minValue: float64, maxValue: float64, decimals: cint, ok: ptr bool, flags: cint, step: float64): float64 {.importc: "QInputDialog_getDouble2".}
proc fcQInputDialog_setDoubleStep(self: pointer, step: float64): void {.importc: "QInputDialog_setDoubleStep".}
proc fcQInputDialog_doubleStep(self: pointer, ): float64 {.importc: "QInputDialog_doubleStep".}
proc fcQInputDialog_textValueChanged(self: pointer, text: struct_miqt_string): void {.importc: "QInputDialog_textValueChanged".}
proc fQInputDialog_connect_textValueChanged(self: pointer, slot: int) {.importc: "QInputDialog_connect_textValueChanged".}
proc fcQInputDialog_textValueSelected(self: pointer, text: struct_miqt_string): void {.importc: "QInputDialog_textValueSelected".}
proc fQInputDialog_connect_textValueSelected(self: pointer, slot: int) {.importc: "QInputDialog_connect_textValueSelected".}
proc fcQInputDialog_intValueChanged(self: pointer, value: cint): void {.importc: "QInputDialog_intValueChanged".}
proc fQInputDialog_connect_intValueChanged(self: pointer, slot: int) {.importc: "QInputDialog_connect_intValueChanged".}
proc fcQInputDialog_intValueSelected(self: pointer, value: cint): void {.importc: "QInputDialog_intValueSelected".}
proc fQInputDialog_connect_intValueSelected(self: pointer, slot: int) {.importc: "QInputDialog_connect_intValueSelected".}
proc fcQInputDialog_doubleValueChanged(self: pointer, value: float64): void {.importc: "QInputDialog_doubleValueChanged".}
proc fQInputDialog_connect_doubleValueChanged(self: pointer, slot: int) {.importc: "QInputDialog_connect_doubleValueChanged".}
proc fcQInputDialog_doubleValueSelected(self: pointer, value: float64): void {.importc: "QInputDialog_doubleValueSelected".}
proc fQInputDialog_connect_doubleValueSelected(self: pointer, slot: int) {.importc: "QInputDialog_connect_doubleValueSelected".}
proc fcQInputDialog_done(self: pointer, resultVal: cint): void {.importc: "QInputDialog_done".}
proc fcQInputDialog_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QInputDialog_tr2".}
proc fcQInputDialog_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QInputDialog_tr3".}
proc fcQInputDialog_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QInputDialog_trUtf82".}
proc fcQInputDialog_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QInputDialog_trUtf83".}
proc fcQInputDialog_setOption2(self: pointer, option: cint, on: bool): void {.importc: "QInputDialog_setOption2".}
proc fcQInputDialog_getText4(parent: pointer, title: struct_miqt_string, label: struct_miqt_string, echo: cint): struct_miqt_string {.importc: "QInputDialog_getText4".}
proc fcQInputDialog_getText5(parent: pointer, title: struct_miqt_string, label: struct_miqt_string, echo: cint, text: struct_miqt_string): struct_miqt_string {.importc: "QInputDialog_getText5".}
proc fcQInputDialog_getText6(parent: pointer, title: struct_miqt_string, label: struct_miqt_string, echo: cint, text: struct_miqt_string, ok: ptr bool): struct_miqt_string {.importc: "QInputDialog_getText6".}
proc fcQInputDialog_getText7(parent: pointer, title: struct_miqt_string, label: struct_miqt_string, echo: cint, text: struct_miqt_string, ok: ptr bool, flags: cint): struct_miqt_string {.importc: "QInputDialog_getText7".}
proc fcQInputDialog_getText8(parent: pointer, title: struct_miqt_string, label: struct_miqt_string, echo: cint, text: struct_miqt_string, ok: ptr bool, flags: cint, inputMethodHints: cint): struct_miqt_string {.importc: "QInputDialog_getText8".}
proc fcQInputDialog_getMultiLineText4(parent: pointer, title: struct_miqt_string, label: struct_miqt_string, text: struct_miqt_string): struct_miqt_string {.importc: "QInputDialog_getMultiLineText4".}
proc fcQInputDialog_getMultiLineText5(parent: pointer, title: struct_miqt_string, label: struct_miqt_string, text: struct_miqt_string, ok: ptr bool): struct_miqt_string {.importc: "QInputDialog_getMultiLineText5".}
proc fcQInputDialog_getMultiLineText6(parent: pointer, title: struct_miqt_string, label: struct_miqt_string, text: struct_miqt_string, ok: ptr bool, flags: cint): struct_miqt_string {.importc: "QInputDialog_getMultiLineText6".}
proc fcQInputDialog_getMultiLineText7(parent: pointer, title: struct_miqt_string, label: struct_miqt_string, text: struct_miqt_string, ok: ptr bool, flags: cint, inputMethodHints: cint): struct_miqt_string {.importc: "QInputDialog_getMultiLineText7".}
proc fcQInputDialog_getItem5(parent: pointer, title: struct_miqt_string, label: struct_miqt_string, items: struct_miqt_array, current: cint): struct_miqt_string {.importc: "QInputDialog_getItem5".}
proc fcQInputDialog_getItem6(parent: pointer, title: struct_miqt_string, label: struct_miqt_string, items: struct_miqt_array, current: cint, editable: bool): struct_miqt_string {.importc: "QInputDialog_getItem6".}
proc fcQInputDialog_getItem7(parent: pointer, title: struct_miqt_string, label: struct_miqt_string, items: struct_miqt_array, current: cint, editable: bool, ok: ptr bool): struct_miqt_string {.importc: "QInputDialog_getItem7".}
proc fcQInputDialog_getItem8(parent: pointer, title: struct_miqt_string, label: struct_miqt_string, items: struct_miqt_array, current: cint, editable: bool, ok: ptr bool, flags: cint): struct_miqt_string {.importc: "QInputDialog_getItem8".}
proc fcQInputDialog_getItem9(parent: pointer, title: struct_miqt_string, label: struct_miqt_string, items: struct_miqt_array, current: cint, editable: bool, ok: ptr bool, flags: cint, inputMethodHints: cint): struct_miqt_string {.importc: "QInputDialog_getItem9".}
proc fcQInputDialog_getInt4(parent: pointer, title: struct_miqt_string, label: struct_miqt_string, value: cint): cint {.importc: "QInputDialog_getInt4".}
